# recommendation-engine

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
deploy/ansible/: deploy.yml  inventory.example.ini
modeling/: __init__.py  export_onnx.py  model.py  verify_onnx.py
proto/: __init__.py  recommender.proto  recommender_pb2.py  recommender_pb2_grpc.py
recommendation_engine/application/: __init__.py  errors.py  use_cases.py
recommendation_engine/domain/: __init__.py  models.py
recommendation_engine/infrastructure/: __init__.py  metrics.py  onnx_recommender.py
recommendation_engine/transport/: __init__.py
recommendation_engine/transport/grpc/: server.py
scripts/: client.py
tests/: test_application.py  test_grpc_server.py  test_modeling.py  test_onnx_integration.py
